@@ -5,6 +5,7 @@
 - Clean up new warnings from gcc 4.0.
 - Replace flags used for LCP/IPCP with state machine.
 - Use openssl MD5, fix DAE vector (Alex Kiernan).
+- Include Acct-Session-Time in interim records.
 
 * Tue Jun 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1
 - Add missing newline to backtrace macro.
